# instant-ngp-nerf-minimal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
experiment/nerf_synthetic/config/: base.json
experiment/nerf_synthetic/python/: common.py  run.py
experiment/nerf_synthetic/python/flip/: main.py  utils.py
experiment/nerf_synthetic/script/: eval_win.bat  train_win.bat
internal/: python_api.cu  testbed.cu  testbed.h
internal/dataset/: nerf_synthetic.cu  nerf_synthetic.h  thread_pool.h
internal/network/: ngp_network.h
internal/render/: ray_marcher.cu  ray_marcher.h
internal/sampler/: bounding_box.h  occupancy_sampler.cu  occupancy_sampler.h  triangle.h
internal/utils/: adam_optimizer.h  common.h  common_device.cu  common_device.h  envmap.h  json_binding.h  loss.cu  loss.h  random_val.cuh  render_buffer.cu  render_buffer.h  trainable_buffer.h
